[package]
name = "S3-Consistancy-Test"
version = "1.0.0"
edition = "2024"

[dependencies]
rust-s3 = "0.34"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3.8"
